--- a/react-app/src/comp/realUi.css
+++ b/react-app/src/comp/realUi.css
@@ -23,13 +23,17 @@
     height: 50vh;
    background-repeat: no-repeat;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     z-index: 1;
     background-attachment: fixed;
 }
 
 .con-mo {
     width: 100vw;
-    background-color: rgb(248, 248, 248);
+    background-color: #dadada;
   
 }
 .home-mo {
@@ -122,6 +126,13 @@
     border-radius: 10px;
     margin-right: 1rem;
 }
+.underl-t {
+    width: 70%;
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+    height: 2px;
+    background-color: rgb(65, 65, 65);
+}
 @media screen and (min-width: 0px) and (max-width:1000px) {
     .home-mo {
         width: 100%;
@@ -188,19 +199,22 @@
          height: 140vh;
         
           background-color: transparent;
-          transform: translate(-200px, 50px);
+          transform: translate(-100px, 60px);
      }
     .text-real-con {
         width: 50%;
-        height: 200vh;
+        height: 140vh;
         background-color: transparent;
-        
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
     }
     .text-c {
-        width: 80%;
+        width: 90%;
         height: 10%;
         background-color: transparent;
-        margin-top: 2rem;
+        margin-top: 4rem;
    
     }
     .text-c h1, p {
@@ -263,6 +277,13 @@
 }
 */
 @media screen and (min-width: 0px) and (max-width:850px) {
+    .text-c {
+        width: 90%;
+        height: 10%;
+        background-color: transparent;
+        margin-top: 0rem;
+        margin-bottom: 2rem;
+    }
     .home-mo {
         width: 100%;
         justify-content: center;
@@ -299,12 +320,29 @@
         background-size: contain;
         border-radius: 10px;
     }
+ 
     .home-moc-2 {
-     
-         transform: translate(0px, 50px);
-    }
+       width: 140%;
+        height: 140vh; 
+        transform: translate(0px, 0px);
+   } 
 } 
 @media screen and (min-width: 0px) and (max-width:650px) {
+    .image-banner-real {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        width: 100vw;
+        height: 50vh;
+       background-repeat: no-repeat;
+        background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        z-index: 1;
+        background-attachment: initial;
+    }
     .img-gal-img-2 {
         width: 100%;
         height: 53vh;
@@ -339,6 +377,29 @@
         border-radius: 10px;
         margin-right: 1rem;
     }
+    .home-moc-2 {
+        bottom: 0;
+        width: 90%;
+        height: 100%;
+       
+         background-color: transparent;
+         transform: translate(-200px, 50px);
+    }
+   .text-real-con {
+       width: 100%;
+       height: 140vh;
+       background-color: transparent;
+       justify-content: center;
+       align-items: center;
+       display: flex;
+       flex-direction: column;
+   }
+    .home-moc-2 {
+      
+       
+         background-color: transparent;
+         transform: translate(0px, 50px);
+    }
 }
 @media screen and (min-width: 0px) and (max-width:580px) {
     .home-moc  {
@@ -352,12 +413,21 @@
      }
      .home-moc-2 {
         bottom: 0;
-        width: 80%;
-        height: 130vh;
+        width: 140%;
+        height: 100%;
        
          background-color: transparent;
          transform: translate(0px, 50px);
     }
+   .text-real-con {
+       width: 100%;
+       height: 140vh;
+       background-color: transparent;
+       justify-content: center;
+       align-items: center;
+       display: flex;
+       flex-direction: column;
+   }
 }
 @media screen and (min-width: 0px) and (max-width:500px) {
     .img-gal-img-2 {
