--- a/react-app/src/comp/UI.css
+++ b/react-app/src/comp/UI.css
@@ -38,13 +38,50 @@
 @keyframes sliders1{
     from{
      opacity: 0;
-      transform: translateY(-200);
+      transform: translateY(200);
     }
     to{
      opacity: 1;
       transform: translateY(0);
     }
   }
+  @keyframes slidersText{
+    from{
+     
+        transform: translateY(-230px);
+        
+    }
+    to{
+     
+        transform: translateY(0px);
+      
+    }
+  }
+     /*--------------------------------*/
+     .textH-show{
+        transform: translateX(0px);
+        transition: 1s .7s;
+      }
+      .textH-hide{
+        transform: translateX(-130px);
+        transition: .5s .7s;
+      }
+    /*--------------------------------*/
+    .proj-title h1{
+     animation: slidersText 1s ;
+   
+    }
+    .proj-title .unde{
+        animation: slidersText 1.3s ;
+      
+       }
+    .proj-title p{
+        animation: slidersText 1.5s;
+      
+       }
+ /* .proj-title h1 {
+    animation: slidersText 1.4s;
+  } */
 .proj-grid {
   width: 95%;
 
@@ -115,11 +152,16 @@
 }
 .proj-text a {
     width: 100%;
+    text-decoration: none;
+    
     height: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
+}
+.proj-text a h1{
+    color: #000;
 }
 .logo-banner-proj {
     width: 40%;
