--- a/react-app/src/comp/weatherUi.css
+++ b/react-app/src/comp/weatherUi.css
@@ -2,16 +2,20 @@
     width: 100%;
     
 }
+.wet-5 {
+    height: 50vh;
+}
 .weat {
     width: 100%;
-    height: 100vh;
+  
   
     justify-content: center;
     align-items: center;
     display: flex;
+    flex-direction: column;
 }
 .weath-text {
-    width: 60%;
+    width: 100%;
     height: 100%;
     
     justify-content: center;
@@ -20,23 +24,53 @@
     flex-direction: column;
 }
 .img-weath-con {
-    width: 40%;
-    height: 100%;
+    width: 100%;
+   
+    background-color: #505050;
+    padding-bottom: 2rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.img-final-1 {
+    width: 90%;
+    height: 100vh;
+    
+    padding: .2rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.img-final-con-light {
+    width: 100%;
+   
     background-color: rgb(240, 240, 240);
+    padding-bottom: 2rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.img-final-con-dark {
+    width: 100%;
+   
+    background-color: rgb(240, 240, 240);
+    padding-bottom: 2rem;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
 }
 .img-weath {
-    width: 70%;
-    height: 70%;
+    width: 50%;
+    height: 50vh;
     
     padding: .5rem;
     justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction: column;
+   
 }
 .image-banner-proj-weat {
     margin-top: 2rem;
@@ -57,18 +91,22 @@
    
 }
 @media screen and (min-width: 0px) and (max-width:800px) {
-    .weat {
-        width: 100%;
-        height: 100vh;
-      
+ 
+    .img-final-1 {
+        width: 90%;
+        height: 400vh;
+        
+        padding: .2rem;
         justify-content: center;
         align-items: center;
         display: flex;
         flex-direction: column;
     }
+}
+@media screen and (min-width: 0px) and (max-width:510px) {
     .img-weath-con {
         width: 100%;
-        height: 100%;
+        
         background-color: rgb(240, 240, 240);
         justify-content: center;
         align-items: center;
@@ -77,13 +115,12 @@
     }
     .img-weath {
         width: 100%;
-        height: 90%;
-        
+        height: 100vh;
+        flex-direction: column;
         padding: .5rem;
+        
     }
-    .weath-text {
-        width: 80%;
-        height: 100%;
-       
+    .button-con {
+        height: 5vh;
     }
 }
